added and removed one li item

--- a/list_demo.html
+++ b/list_demo.html
@@ -18,6 +18,7 @@
     </ul>
     <h3>Cafe Menu</h3>
     <li>Chicken Burger</li>
+    <li>Beef Burger</li>
 
     <ul>
       <li>Chicken Pizza</li>
@@ -26,7 +27,7 @@
     <h3>Steps to Install VS Code</h3>
     <ol>
       <li>Go to VScode.com</li>
-      <li>Choose Windows</li>
+      <!-- <li>Choose Windows</li> -->
     </ol>
   </body>
 </html>
