add new row in the grid

--- a/bs-grid.html
+++ b/bs-grid.html
@@ -17,5 +17,10 @@
       <div class="col-md-6 bg-primary text-white ht200">Block 1</div>
       <div class="col-md-6 col-sm-6 bg-danger text-white ht200">Block 2</div>
     </div>
+    <div class="row">
+      <div class="col-md-4 bg-secondary text-white ht200">Block 1</div>
+      <div class="col-md-4 bg-info text-white ht200">Block 2</div>
+      <div class="col-md-4 bg-warning text-white ht200">Block 3</div>
+    </div>
   </body>
 </html>
